--- a/template/pom.xml
+++ b/template/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>api</module>
         <module>freemarker</module>
+        <module>thymeleaf</module>
     </modules>
 
 
